--- a/assets/css/episodes.css
+++ b/assets/css/episodes.css
@@ -404,3 +404,24 @@ body {
     font-weight: 600;
     box-shadow: inset 0 0 0 1px rgba(255,255,255,0.06);
 }
+/* تناوب ألوان الحلقات */
+.episodes-list li:nth-child(odd) a {
+    background-color: #2f2f2f;
+}
+
+.episodes-list li:nth-child(even) a {
+    background-color: #3a3a3a;
+}
+
+/* hover */
+.episodes-list li a:hover {
+    background-color: #4a4a4a;
+    color: #ffffff;
+}
+
+/* الحلقة الحالية */
+.episodes-list li.active a {
+    background-color: #1f1f1f; /* داكن */
+    color: #ffffff;
+    font-weight: 600;
+}
