--- a/assets/css/episodes.css
+++ b/assets/css/episodes.css
@@ -310,7 +310,7 @@
     align-items: center;
     gap: 10px;
     margin: 15px 0;
-    background: #1e1e1e;
+    background-color: var(--site-bg-color);
     padding: 10px;
     border-radius: 8px;
 }
@@ -333,7 +333,7 @@
 
 /* قائمة الحلقات */
 .episodes-section {
-    background-color: #1e1e1e;
+    background-color: var(--site-bg-color);
     border-radius: 10px;
     padding: 10px;
 }
